<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sros2_oidc</name>
  <version>0.0.1</version>
  <description>This is a security tool in ROS2 to securely receive requests from people.</description>
  <maintainer email="fukuta_tatsuya@intec.co.jp">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-connexion-pip</exec_depend>
  <exec_depend>python-dateutil</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
